♻️ refactor / hook up settings + more settings / add apex + static resource logic to svg nodes / fix svg node memoization / fix component view overflow scroll + add sticky section headers

--- a/src/style.css
+++ b/src/style.css
@@ -77,6 +77,12 @@ button {
 #key [data-css]:before {
   background-color: #563d7c;
 }
+#key [data-apex]:before {
+  background-color: #1797c0;
+}
+#key [data-static-resource]:before {
+  background-color: #589059;
+}
 
 .buttons {
   position: absolute;
@@ -181,11 +187,25 @@ button {
 #component > div {
   display: flex;
   flex-direction: column;
+  overflow: auto;
+  max-height: 100vh;
 }
 #component header {
-  position: relative;
+  position: sticky;
+  top: 0;
+  left: 0;
   display: flex;
   background-color: #323842;
+  z-index: 10;
+}
+#component .file-ref-container {
+  overflow: auto;
+}
+#component .file-ref-type-container {
+  position: relative;
+}
+#component .file-ref-type-container {
+  position: relative;
 }
 
 #component[data-type-js="false"] .icon-javascript {
@@ -216,16 +236,15 @@ button {
 .ref-title {
   font-size: 10px;
   font-weight: 500;
-  padding: 4px 6px 4px 16px;
+  padding: 4px 6px 4px 17px;
   margin: 0;
-  position: relative;
+  position: sticky;
+  top: 0;
   color: #abb2bf;
   background-color: #282c34;
   overflow: hidden;
   text-transform: uppercase;
-}
-.ref-title:first-of-type:before {
-  transform: rotate(180deg);
+  z-index: 5;
 }
 .ref-title:before {
   content: '';
@@ -234,11 +253,30 @@ button {
   height: 100%;
   left: 2px;
   top: 0;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='icon icon-tabler icon-tabler-arrow-left' width='24' height='24' viewBox='0 0 24 24' stroke-width='2' stroke='%23fff' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'%3E%3C/path%3E%3Cpath d='M5 12l14 0'%3E%3C/path%3E%3Cpath d='M5 12l6 6'%3E%3C/path%3E%3Cpath d='M5 12l6 -6'%3E%3C/path%3E%3C/svg%3E");
-  background-size: contain;
+  background-size: 90%;
   background-position: center center;
   background-repeat: no-repeat;
 }
+#referenced-by:before,
+#references:before {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='icon icon-tabler icon-tabler-arrow-left' width='24' height='24' viewBox='0 0 24 24' stroke-width='2' stroke='%23fff' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'%3E%3C/path%3E%3Cpath d='M5 12l14 0'%3E%3C/path%3E%3Cpath d='M5 12l6 6'%3E%3C/path%3E%3Cpath d='M5 12l6 -6'%3E%3C/path%3E%3C/svg%3E");
+}
+#referenced-by:before {
+  transform: rotate(180deg);
+}
+
+.ref-title[data-has-data='false'] {
+  display: none;
+}
+#apex-references:before {
+  background-size: 85%;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='icon icon-tabler icon-tabler-bed' width='24' height='24' viewBox='0 0 24 24' stroke-width='2' stroke='%23fff' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'%3E%3C/path%3E%3Cpath d='M3 7v11m0 -4h18m0 4v-8a2 2 0 0 0 -2 -2h-8v6'%3E%3C/path%3E%3Cpath d='M7 10m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0'%3E%3C/path%3E%3C/svg%3E");
+}
+#static-resources:before {
+  background-size: 85%;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='icon icon-tabler icon-tabler-box' width='24' height='24' viewBox='0 0 24 24' stroke-width='2' stroke='%23fff' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'%3E%3C/path%3E%3Cpath d='M12 3l8 4.5l0 9l-8 4.5l-8 -4.5l0 -9l8 -4.5'%3E%3C/path%3E%3Cpath d='M12 12l8 -4.5'%3E%3C/path%3E%3Cpath d='M12 12l0 9'%3E%3C/path%3E%3Cpath d='M12 12l-8 -4.5'%3E%3C/path%3E%3C/svg%3E");
+}
+
 #component ul {
   margin: 0;
   padding: 0;
@@ -260,6 +298,8 @@ button {
   background-color: transparent;
   border: none;
   margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 #component ul li button:hover {
   background-color: #2c313a;
@@ -283,6 +323,12 @@ button {
 }
 #component ul li button[data-type='css']:before {
   background-image: url('./css.svg') ;
+}
+#component ul li button[data-type='apex']:before {
+  background-image: url('./salesforce.svg') ;
+}
+#component ul li button[data-type='staticResource']:before {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='icon icon-tabler icon-tabler-file-zip' width='24' height='24' viewBox='0 0 24 24' stroke-width='2' stroke='%23fff' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z' fill='none'%3E%3C/path%3E%3Cpath d='M6 20.735a2 2 0 0 1 -1 -1.735v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-1'%3E%3C/path%3E%3Cpath d='M11 17a2 2 0 0 1 2 2v2a1 1 0 0 1 -1 1h-2a1 1 0 0 1 -1 -1v-2a2 2 0 0 1 2 -2z'%3E%3C/path%3E%3Cpath d='M11 5l-1 0'%3E%3C/path%3E%3Cpath d='M13 7l-1 0'%3E%3C/path%3E%3Cpath d='M11 9l-1 0'%3E%3C/path%3E%3Cpath d='M13 11l-1 0'%3E%3C/path%3E%3Cpath d='M11 13l-1 0'%3E%3C/path%3E%3Cpath d='M13 15l-1 0'%3E%3C/path%3E%3C/svg%3E");
 }
 
 /* Settings Sidebar */
@@ -335,6 +381,48 @@ button {
   margin: 0 0 0 2px;
   font-weight: 400;
   font-size: 12px;
+  line-height: 1.32;
+  color: #abb2bf;
+}
+
+.input-container.select {
+  display: flex;
+  flex-direction: column;
+}
+.input-container.select .label {
+  margin: 0 2px;
+  font-weight: 600;
+  font-size: 12px;
+  color: #fff;
+}
+.input-container.select span {
+  margin: 0 2px;
+  font-weight: 400;
+  font-size: 12px;
+  color: #abb2bf;
+}
+.input-container.select select {
+  margin: 6px 3px 0;
+  font-weight: 400;
+  font-size: 12px;
+  color: #abb2bf;
+  width: calc(100% - 6px);
+  background-color: #21252b;
+  border-radius: 3px;
+  border: 0.5px solid transparent;
+}
+.input-container.select option {
+  background-color: #21252b;
+}
+.input-container.select option:active,
+.input-container.select option:hover {
+  background-color: #2c313a;
+}
+.input-container.select span p {
+  margin: 0 2px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.32;
   color: #abb2bf;
 }
 
@@ -376,6 +464,16 @@ button {
   padding: 4px 4px 3px;
   outline: none;
 }
+#search input:after {
+  content: '/';
+  position: absolute;
+  right: 2px;
+  top: 1px;
+  width: 12px;
+  height: 100%;
+  border: 0.5px solid #3e4452;
+}
+
 #search input:focus {
   border: 0.5px solid #3e4452;
 }
